Bug 293450 - korganizer alarm daemon crashed without apparent reason
Summary: korganizer alarm daemon crashed without apparent reason
Status: RESOLVED FIXED
Alias: None
Product: korgac
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 296416 298293 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-06 14:17 UTC by kavol
Modified: 2012-07-05 21:00 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.15 KB, text/plain)
2012-05-14 11:29 UTC, kavol
Details
New crash information added by DrKonqi (4.12 KB, text/plain)
2012-05-24 08:01 UTC, kavol
Details
New crash information added by DrKonqi (4.13 KB, text/plain)
2012-06-25 11:52 UTC, kavol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kavol 2012-02-06 14:17:05 UTC
Application: korgac (4.8.0)
KDE Platform Version: 4.8.00 (4.8.0
Qt Version: 4.8.0
Operating System: Linux 3.2.2-1.fc16.x86_64 x86_64
Distribution: "Fedora release 16 (Verne)"

-- Information about the crash:
- What I was doing when the application crashed:
I was working offline on my laptop. Then I closed the lid, which has suspended the machine to RAM. Then I've briefly reopened the lid to check something and closed it again (without unlocking). After pulling the machine out again, I've found that it is not asleep, and when I've opened the lid, after unlocking the screen, I've found DrKonqi awaiting with the report ...
Note that meanwhile, while being closed but not asleep, the machine got into reach of wifi, allowing it to connect to the Internet - but not to the calendar server.

- Unusual behavior I noticed:
As stated before, the machine did not suspend on closing the lid.

-- Backtrace:
Application: KOrganizer démon upomínek (korgac), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#6  ref (this=0x29) at /usr/include/QtCore/qatomic_x86_64.h:121
#7  ref (this=0x7fff52816a40) at /usr/include/QtCore/qsharedpointer_impl.h:428
#8  ExternalRefCount (other=..., this=0x7fff52816a40) at /usr/include/QtCore/qsharedpointer_impl.h:397
#9  QSharedPointer (other=..., this=0x7fff52816a40) at /usr/include/QtCore/qsharedpointer_impl.h:480
#10 AlarmDialog::triggerDateForIncidence (incidence=..., reminderAt=..., displayStr=...) at /usr/src/debug/kdepim-4.8.0/korganizer/korgac/alarmdialog.cpp:816
#11 0x0000000000419409 in AlarmDialog::addIncidence (this=0x104e0b70, incidenceitem=..., reminderAt=..., displayText=...) at /usr/src/debug/kdepim-4.8.0/korganizer/korgac/alarmdialog.cpp:321
#12 0x000000000040e1e4 in KOAlarmClient::createReminder (this=0x11fa220, calendar=0x12a1ac0, aitem=..., remindAtDate=..., displayText=...) at /usr/src/debug/kdepim-4.8.0/korganizer/korgac/koalarmclient.cpp:205
#13 0x000000000040e8a6 in KOAlarmClient::checkAlarms (this=0x11fa220) at /usr/src/debug/kdepim-4.8.0/korganizer/korgac/koalarmclient.cpp:178
#14 0x000000318078cce1 in QMetaObject::activate (sender=0x11fa258, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#15 0x0000003180791c49 in QObject::event (this=0x11fa258, e=<optimized out>) at kernel/qobject.cpp:1157
#16 0x0000003510dc9994 in notify_helper (e=0x7fff52817710, receiver=0x11fa258, this=0x1085620) at kernel/qapplication.cpp:4550
#17 QApplicationPrivate::notify_helper (this=0x1085620, receiver=0x11fa258, e=0x7fff52817710) at kernel/qapplication.cpp:4522
#18 0x0000003510dce813 in QApplication::notify (this=0x7fff52817a20, receiver=0x11fa258, e=0x7fff52817710) at kernel/qapplication.cpp:4411
#19 0x0000003cfce50eb6 in KApplication::notify (this=0x7fff52817a20, receiver=0x11fa258, event=0x7fff52817710) at /usr/src/debug/kdelibs-4.8.0/kdeui/kernel/kapplication.cpp:311
#20 0x000000318077904c in QCoreApplication::notifyInternal (this=0x7fff52817a20, receiver=0x11fa258, event=0x7fff52817710) at kernel/qcoreapplication.cpp:876
#21 0x00000031807a9b52 in sendEvent (event=0x7fff52817710, receiver=<optimized out>) at kernel/qcoreapplication.h:231
#22 QTimerInfoList::activateTimers (this=0x1087d50) at kernel/qeventdispatcher_unix.cpp:611
#23 0x00000031807a752d in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#24 timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:180
#25 0x00000031807a7551 in idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:233
#26 0x0000003fafe44acd in g_main_dispatch (context=0x1088230) at gmain.c:2441
#27 g_main_context_dispatch (context=0x1088230) at gmain.c:3011
#28 0x0000003fafe452c8 in g_main_context_iterate (context=0x1088230, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3089
#29 0x0000003fafe4549c in g_main_context_iteration (context=0x1088230, may_block=1) at gmain.c:3152
#30 0x00000031807a7d5f in QEventDispatcherGlib::processEvents (this=0x104a790, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#31 0x0000003510e6c66e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#32 0x0000003180778182 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00000031807783d7 in QEventLoop::exec (this=0x7fff528179b0, flags=...) at kernel/qeventloop.cpp:204
#34 0x000000318077cdd5 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#35 0x000000000040d8ed in main (argc=3, argv=0x7fff52817d18) at /usr/src/debug/kdepim-4.8.0/korganizer/korgac/korgacmain.cpp:96

Reported using DrKonqi
Comment 1 kavol 2012-05-14 11:29:22 UTC
Created attachment 71083 [details]
New crash information added by DrKonqi

korgac (4.8.3) on KDE Platform 4.8.3 (4.8.3) using Qt 4.8.1

- What I was doing when the application crashed:

It just crashed without any apparent reason, no special action this time.

-- Backtrace (Reduced):
#8  ExternalRefCount (other=..., this=<synthetic pointer>) at /usr/include/QtCore/qsharedpointer_impl.h:397
#9  QSharedPointer (other=..., this=<synthetic pointer>) at /usr/include/QtCore/qsharedpointer_impl.h:480
#10 AlarmDialog::triggerDateForIncidence (incidence=..., reminderAt=..., displayStr=...) at /usr/src/debug/kdepim-4.8.3/korganizer/korgac/alarmdialog.cpp:816
#11 0x000000000041762b in AlarmDialog::addIncidence (this=0x1c5be90, incidenceitem=..., reminderAt=..., displayText=...) at /usr/src/debug/kdepim-4.8.3/korganizer/korgac/alarmdialog.cpp:321
#12 0x000000000040e2e4 in KOAlarmClient::createReminder (this=this@entry=0x1657430, calendar=0x16d5e80, aitem=..., remindAtDate=..., displayText=...) at /usr/src/debug/kdepim-4.8.3/korganizer/korgac/koalarmclient.cpp:205
Comment 2 kavol 2012-05-24 08:01:15 UTC
Created attachment 71338 [details]
New crash information added by DrKonqi

korgac (4.8.3) on KDE Platform 4.8.3 (4.8.3) using Qt 4.8.1

- What I was doing when the application crashed:

still crashing with the latest packages ...

-- Backtrace (Reduced):
#8  ExternalRefCount (other=..., this=<synthetic pointer>) at /usr/include/QtCore/qsharedpointer_impl.h:397
#9  QSharedPointer (other=..., this=<synthetic pointer>) at /usr/include/QtCore/qsharedpointer_impl.h:480
#10 AlarmDialog::triggerDateForIncidence (incidence=..., reminderAt=..., displayStr=...) at /usr/src/debug/kdepim-4.8.3/korganizer/korgac/alarmdialog.cpp:816
#11 0x000000000041762b in AlarmDialog::addIncidence (this=0x8bda0e0, incidenceitem=..., reminderAt=..., displayText=...) at /usr/src/debug/kdepim-4.8.3/korganizer/korgac/alarmdialog.cpp:321
#12 0x000000000040e2e4 in KOAlarmClient::createReminder (this=this@entry=0x1e0f090, calendar=0x1e8d940, aitem=..., remindAtDate=..., displayText=...) at /usr/src/debug/kdepim-4.8.3/korganizer/korgac/koalarmclient.cpp:205
Comment 3 kavol 2012-06-25 11:52:18 UTC
Created attachment 72120 [details]
New crash information added by DrKonqi

korgac (4.8.4) on KDE Platform 4.8.4 (4.8.4) using Qt 4.8.2

- What I was doing when the application crashed:

still present in KDE 4.8.4, very annoying ...

-- Backtrace (Reduced):
#8  ExternalRefCount (other=..., this=<synthetic pointer>) at /usr/include/QtCore/qsharedpointer_impl.h:397
#9  QSharedPointer (other=..., this=<synthetic pointer>) at /usr/include/QtCore/qsharedpointer_impl.h:480
#10 AlarmDialog::triggerDateForIncidence (incidence=..., reminderAt=..., displayStr=...) at /usr/src/debug/kdepim-4.8.4/korganizer/korgac/alarmdialog.cpp:816
#11 0x000000000041762b in AlarmDialog::addIncidence (this=0x1e3e210, incidenceitem=..., reminderAt=..., displayText=...) at /usr/src/debug/kdepim-4.8.4/korganizer/korgac/alarmdialog.cpp:321
#12 0x000000000040e2e4 in KOAlarmClient::createReminder (this=this@entry=0x1dd61d0, calendar=0x1c42840, aitem=..., remindAtDate=..., displayText=...) at /usr/src/debug/kdepim-4.8.4/korganizer/korgac/koalarmclient.cpp:205
Comment 4 Allen Winter 2012-06-25 19:14:58 UTC
probable fix committed in 76b2d3fc766e85a34f3c485958a41b7622529c32
Comment 5 Jekyll Wu 2012-07-05 20:59:53 UTC
*** Bug 296416 has been marked as a duplicate of this bug. ***
Comment 6 Jekyll Wu 2012-07-05 21:00:06 UTC
*** Bug 298293 has been marked as a duplicate of this bug. ***