in triggerDateForIncidence(), return (don't assert) if the specified incidence doesn't have any alarms suddenly.  perhaps this happens if the backend is unable to supply the item data somehow. like in the case of this bug report where the calendar was inaccessible.

BUG: 293450
MERGE: 4.8, 4.9
FIXED-IN: 4.8.5